package com.company.Media;

public class MediaException extends Exception {

    public MediaException(String message) {
        super(message);
    }
}

/* 1 Créer MediaException -|> Exception

 *  */